monit-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: monit-ingress
  namespace: monit
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/server-snippet: |
      location "^/(.*)" {
        proxy_set_header   X-Real-IP $remote_addr;
        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_http_version 1.1;
        proxy_set_header   Upgrade $http_upgrade;
        proxy_set_header   Connection "upgrade";
      }
spec:
  tls:
  - hosts:
    - monit.gpastor.net
    secretName: gpastor-wildcard 
  rules:
  - host: monit.gpastor.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monit-web-service
            port:
              number: 3001
